# gemu

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
core/: admin.py  forms.py  helpers.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20180507_1213.py  0002_remove_userprofile_follows.py  0003_connection.py  0003_post.py  0004_uprofile.py  0005_comment.py
core/templatetags/: custom_filters.py
gemu/: asgi.py  settings.py  urls.py  wsgi.py
plaxed/: settings.py  urls.py  wsgi.py
plaxed/settings/: validators.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py  0003_auto_20170726_1446.py
posts/templatetags/: custom_filters.py
static/css/: style.css
templates/: base.html  footer.html  header.html  index.html  index_user.html
templates/account/: login.html  login_form.html  logout.html  signup.html
templates/alerts/: userprofile_completion.html
templates/auth/: user_detail.html
templates/base/: base.html  header.html
templates/connection/: follower.html  following.html  profile_follower.html  profile_following.html
templates/core/: footer.html  index.html  login.html  signup.html
templates/explore/: explore.html  explore_aside_right.html  explore_menu.html  explore_user.html
templates/forms/: form.html
templates/modules/: social_mod_buttons.html  the_more_you_know.html  user.html  who_to_follow.html
templates/perfil/: perfil.html  perfil_fotos.html  (+2 more)
userprofile/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+54 files in other folders)
